refactor: integrate REST into magdaconnector